cleaning the code-3 ...adding some comments and adding more .jsx fiels into components folder.

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="omar chatin official site"
     />
-    <title>React App</title>
+    <title>Omar Chatin</title>
   </head>
   <body>
     <div id="root"></div>
